--- a/task-manager-ui/src/App.css
+++ b/task-manager-ui/src/App.css
@@ -5,43 +5,43 @@
 @tailwind utilities;
 /* Custom thin scrollbar for project-item in the project list component */
 .project-item::-webkit-scrollbar {
-    width: 6px;
-  }
-  
-  .project-item::-webkit-scrollbar-track {
-    background: #f1f1f1;
-  }
-  
-  .project-item::-webkit-scrollbar-thumb {
-    background-color: #888;
-    border-radius: 10px;
-  }
-  
-  .project-item::-webkit-scrollbar-thumb:hover {
-    background-color: #555;
-  }
-  
-.font-inria-serif{
-  font-family: "Inria-Serif", sans-serif;
+  width: 6px;
 }
 
-.font-inter{
-  font-family: "Inter", sans-serif;
+.project-item::-webkit-scrollbar-track {
+  background: #f1f1f1;
 }
 
-.border-bottom-black{
+.project-item::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 10px;
+}
+
+.project-item::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+}
+
+.font-inria-serif {
+  font-family: 'Inria-Serif', sans-serif;
+}
+
+.font-inter {
+  font-family: 'Inter', sans-serif;
+}
+
+.border-bottom-black {
   border-bottom: 1px solid #000;
 }
 
-.border-top-black{
+.border-top-black {
   border-top: 1px solid #000;
 }
 
-.border-black-all{
+.border-black-all {
   border: 1px solid #000;
 }
 
-.link.active{
-  border-left: 3px solid #FFE046;
-  background-color: rgba(252, 231, 124, .2);
+.link.active {
+  border-left: 3px solid #ffe046;
+  background-color: rgba(252, 231, 124, 0.2);
 }
